[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/overworld/rabbit.png" type="Texture" id=1]
[ext_resource path="res://assets/hacking/learning_with_computers .mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/hacking/regex/regex.gd" type="Script" id=3]

[node name="regex" type="Node2D"]
script = ExtResource( 3 )

[node name="RootContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer"]
margin_right = 1280.0
margin_bottom = 720.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RootContainer/HBoxContainer"]
margin_left = 384.0
margin_right = 896.0
margin_bottom = 720.0
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="RootContainer/HBoxContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 716.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="QuestionLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 305.0
margin_right = 512.0
margin_bottom = 320.0
grow_horizontal = 2
rect_min_size = Vector2( 512, 0 )
text = "Progress"
fit_content_height = true

[node name="RegexLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 512.0
margin_bottom = 339.0
grow_horizontal = 2
rect_min_size = Vector2( 512, 0 )
text = "Progress"
fit_content_height = true

[node name="StatusLabel" type="RichTextLabel" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 343.0
margin_right = 512.0
margin_bottom = 358.0
grow_horizontal = 2
rect_min_size = Vector2( 512, 0 )
text = "Progress"
fit_content_height = true

[node name="AnswerInput" type="LineEdit" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 512.0
margin_bottom = 386.0

[node name="SubmitButton" type="Button" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 512.0
margin_bottom = 410.0
text = "Submit"

[node name="VBoxContainer2" type="VBoxContainer" parent="RootContainer/HBoxContainer/VBoxContainer"]
margin_left = 256.0
margin_top = 720.0
margin_right = 256.0
margin_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 5
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
alignment = 2

[node name="SkipButton" type="Button" parent="RootContainer/HBoxContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
visible = false
margin_right = 164.0
margin_bottom = 70.0
text = "Skip question"
icon = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true
